Bug 67665 - Style font is not stored for ODG and ODP files: after editing a style, closing and reponening, it is changed
Summary: Style font is not stored for ODG and ODP files: after editing a style, closin...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: odf target:4.2.0 target:4.1.1
Keywords: bibisected, regression
: 67565 68256 68469 68624 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-08-02 11:23 UTC by Alice Vixie
Modified: 2015-12-17 07:22 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments
an errorneous ODG and reference PDF (359.21 KB, application/zip)
2013-08-02 11:23 UTC, Alice Vixie
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alice Vixie 2013-08-02 11:23:04 UTC
Created attachment 83529 [details]
an errorneous ODG and reference PDF

Steps to reproduce:

1. get Liberation font set ( https://en.wikipedia.org/wiki/Liberation_fonts )
2. start Libreoffice in your Windows 7 64bit
3. open the ODG attachment
4. compare with PDF attachment created from the file

5. If the problem was reproduced properly: instead of Liberation fonts (as show in PDF), you will see Times New Roman in the whole text (ODG)
6. Change styles to Liberation fonts
7. Save the ODG
8. Goto 2.
Comment 1 Jorendc 2013-08-03 10:03:14 UTC
Mmh, strange. I can reproduce the behavior when I open your attached ODG. From step 6 I fail to reproduce it. Changing the font back to 'Liberation Sans', save it, reopen it -> correct font.

Can you reproduce this problem every time, also from scratch?

Kind regards,
Joren
Comment 2 Joel Madero 2013-08-05 21:52:38 UTC
You don't have to get any font set- just try setting the default style to anything else - save, close, reopen - styles aren't saved.

Thank you for reporting this issue! I have been able to confirm the issue on:
Version: 4.2.0.0.alpha0+Build ID: 09a4c4d176ff97ab8ff4027af83a549991667baf
 Date:   Tue Jul 30 19:05:34 2013 +0300 
Platform: Bodhi Linux 2.2 x64

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
As I've been able to confirm this problem I am marking as:

New (confirmed)
Critical - complete loss of data for styles - can break any draw/impress document that uses custom styles
Highest - relatively popular feature (styles) + regression

Keywords - regression

Whiteboard Status - bibisected

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage and join us on freenode at #libreoffice-qa

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 3 Joel Madero 2013-08-05 21:53:41 UTC
 2dfc8547708ece603fe3d62ec31cb73c1ad0fe7c is the first bad commit
commit 2dfc8547708ece603fe3d62ec31cb73c1ad0fe7c
Author: Jean-Baptiste Lallement <jean-baptiste.lallement@canonical.com>
Date:   Tue Mar 12 20:47:48 2013 +0000

    source-hash-fea303a3d7422d26b7d4ea26126b0769e66dda40
    
    commit fea303a3d7422d26b7d4ea26126b0769e66dda40
    Author:     Urs Fässler <urs@bitzgi.ch>
    AuthorDate: Fri Mar 1 11:05:30 2013 +0100
    Commit:     Michael Meeks <michael.meeks@suse.com>
    CommitDate: Fri Mar 1 12:18:45 2013 +0000
    
        translation of German comments in file sd/source/filter/html/pubdlg.cxx
    
        Change-Id: I7c4963560bab186721ec5ef95461a4dcb6994351

:100644 100644 83da8bfa7da01660e4cc59c8a41da104b3003c1b 60d32746b3a465da2b86c4d968e755e379b64eed M	autogen.log
:100644 100644 bb9f3bf110a693816b1ca27a2213544de05c8e09 c246ce6fdb0143830ae9dce06f0646b6d814f0e2 M	ccache.log
:100644 100644 ffd216fbec84ffaa39419ee97ad73b198189890e a03ca66d03cdc8aeefd6c1db627040b909f98b62 M	commitmsg
:100644 100644 006447e3cf204a30c9aaa909207e7f98b905bef8 2eed45fe7014c3d817ac021cd472ab9ac8be2f37 M	dev-install.log
:100644 100644 8f21f6f3a7c2fb2298d4392387020a4874e25b89 dd769a786d7609ae758a0ef753fa8678dec5718d M	make.log
:040000 040000 26d4e4d23578e4e7cb9edff66233e8dfb34e2f11 b01149b08ac26b704f0d19a8fc3edeefe33fb765 M	opt


# bad: [4118d739dbd71e16057ea926ef3ef696025d3b67] source-hash-5bd6a5110bb812f82a81e73422a7b14851f84441
# good: [3e7462bd65e692bf0592d5b080b7716341b62a47] source-hash-1eddfce9894fd05315173744f495619189093dc7
git bisect start 'latest' 'oldest'
# bad: [086c82fbd0a50dbf5dd28e8bcc7a6d702cea124e] source-hash-c74f2edfce221960fe546e88f2b3222d69d53598
git bisect bad 086c82fbd0a50dbf5dd28e8bcc7a6d702cea124e
# good: [3367a5f4f0d1768c35ed32ac1956abf5c3ab4e0d] source-hash-cc9cd7af3beb13eede23c6c60506c6e8c329e29d
git bisect good 3367a5f4f0d1768c35ed32ac1956abf5c3ab4e0d
# bad: [8609688fe6682504b3e6bc675e209db988d3acc1] source-hash-de69091d34d8102c0b56194d603ed9e66699d34c
git bisect bad 8609688fe6682504b3e6bc675e209db988d3acc1
# good: [a0da7886ec5c1ecfc0b5a1e9a85a18459a764761] source-hash-a82f7b20539e60f1cf599afcceaf865bef297a66
git bisect good a0da7886ec5c1ecfc0b5a1e9a85a18459a764761
# bad: [fc3244a3c07d510a46baf5f999d378d07277fe1d] source-hash-5e8402ade84ab1816d32793e3476521e1c5b1027
git bisect bad fc3244a3c07d510a46baf5f999d378d07277fe1d
# good: [7e77cca7155e14b96615173a7a68c2826750e6f5] source-hash-c7ef87aa8db6d892491891dcda6bfbaa1ad1d0d2
git bisect good 7e77cca7155e14b96615173a7a68c2826750e6f5
# bad: [71441d60f3e4303a8f0ba04754f46fac09bf3f54] source-hash-5ff1afbf1ef1dbea81c156572e7cd125bde70778
git bisect bad 71441d60f3e4303a8f0ba04754f46fac09bf3f54
# bad: [917b8fc1dcc2f28ff6602528a130118eb79a8149] source-hash-24ba80686c9028b4f6dd1f63bfe905c029068b11
git bisect bad 917b8fc1dcc2f28ff6602528a130118eb79a8149
# bad: [2dfc8547708ece603fe3d62ec31cb73c1ad0fe7c] source-hash-fea303a3d7422d26b7d4ea26126b0769e66dda40
git bisect bad 2dfc8547708ece603fe3d62ec31cb73c1ad0fe7c



Thorsten - perhaps you can pinpoint who broke it?
Comment 5 Luboš Luňák 2013-08-06 10:33:29 UTC
This works with .odt , so my guess is that Draw is missing import code that apply the font information from the import filter to its styles.
Comment 6 Valdas 2013-08-06 11:28:57 UTC
Bug also exists in Version: 4.1.1.0.0+; Build ID: 09a8fb1d90964d51d93a7e23a8d4af832fa614a; TinderBox: Linux-x86_64@31-Release-Configuration-RHEL5-Baseline, Branch:libreoffice-4-1, Time: 2013-08-05_23:28:45
Comment 7 Cor Nouws 2013-08-06 21:01:42 UTC
(In reply to comment #2)
> You don't have to get any font set- just try setting the default style to
> anything else - save, close, reopen - styles aren't saved.


OK, then this seems the same as what is mentioned here
  https://bugs.freedesktop.org/show_bug.cgi?id=67565#c12
Comment 8 Cor Nouws 2013-08-13 17:45:45 UTC
*** Bug 67565 has been marked as a duplicate of this bug. ***
Comment 9 Cor Nouws 2013-08-13 17:47:41 UTC
Marked 67565 as duplicate.

From comment 21 there
  https://bugs.freedesktop.org/show_bug.cgi?id=67565#c21

"
Steps to reproduce problem:-

- Open attached document.
- On first page of attached document, right-click on top-left text box with text "Force feedback input" and select "Edit style".
- Change the font to Arial.
- Watch all text in Times font change to Arial.
- Save document.
- Close document.
- Open document.
- Look in horror as all text is back to Times again!!!!!
"

I edit the summary of this bug a bit
Comment 10 Derek Keats 2013-08-20 06:35:24 UTC
This is a killer bug. What can be done to speed up getting it assigned and getting a patch out there to fix it? It is forcing people to switch to alternative packages to LibreOffice. Some of us upgraded because of awful bugs in previous versions, so going back to older versions is not even really an option. I am asking this out of innocence as a long time supporter of Free Software. I cannot imagine having a bug that stops the application dead in its tracks and then not fixing it. I would sell my soul to the devil for a reasonable fix that is released so ordinary folk can use it.
Comment 11 Caolán McNamara 2013-08-20 09:27:11 UTC
Well, its XMLTextExportPropertySetMapper::ContextFontFilter that kills the export of the font info. The mentioned bibisect commits put all fonts into the FontAutoStylePool and ContextFontFilter gets called multiple times and ends up filtering out all info about the font via that GetFontAutoStylePool()->Find area.
Comment 12 Commit Notification 2013-08-20 10:47:17 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=26dc5f2ee67342bd474640e1cc39b96d3220721b

Resolves: fdo#67665 font names filtered out on odp/odg export



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-08-20 14:11:59 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ba85d483d392f2fa37a92e5fda56c0c121c6d8bc&h=libreoffice-4-1

Resolves: fdo#67665 font names filtered out on odp/odg export


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2013-08-20 16:26:56 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea3863d2597d70719b2e590260c05fd8aecc7836&h=libreoffice-4-1-1

Resolves: fdo#67665 font names filtered out on odp/odg export


It will be available already in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Dale 2013-08-24 07:28:08 UTC
I can confirm that in the build listed below it is fixed for me.
Version: 4.1.2.0.0+
Build ID: d422eeed14f34e8595f795135be847fe5b6c555
TinderBox: Win-x86@6-debug, Branch:libreoffice-4-1, Time: 2013-08-23_01:32:45
Comment 16 Maxim Monastirsky 2013-08-27 13:11:27 UTC
*** Bug 68469 has been marked as a duplicate of this bug. ***
Comment 17 Maxim Monastirsky 2013-08-27 13:14:03 UTC
*** Bug 68256 has been marked as a duplicate of this bug. ***
Comment 18 Maxim Monastirsky 2013-08-27 19:04:21 UTC
*** Bug 68624 has been marked as a duplicate of this bug. ***
Comment 19 Maxim Monastirsky 2013-08-28 05:17:45 UTC
@Caolán McNamara: Still not fixed completely, as it's now incompatible with older versions. see Bug 68431 comment 8. thanks.
Comment 20 whoever 2013-08-28 06:41:16 UTC
The font is now saved, in the actual daily - at least for me. But the indent on the first line is still not saved (probably this is the own bug #62176, and can not be fixed together)
Comment 21 Maxim Monastirsky 2013-08-28 10:19:38 UTC
(In reply to comment #20)
> The font is now saved, in the actual daily - at least for me.
by "older versions" I meant 4.0.X.
Comment 22 Robinson Tryon (qubit) 2015-12-17 07:22:27 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]