Resolves: fdo#67665 font names filtered out on odp/odg export

Change-Id: Ia529992d15152db981379a1e0a4dec63b2dad40c